src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
/* global.css or a CSS module */
.actor-carousel-container {
  overflow-x: auto; /* Enable horizontal scroll */
  white-space: nowrap; /* Prevent wrapping of items */
}

.actor-card {
  display: inline-block; /* Ensure cards align horizontally */
}

.scrollbar-hidden {
  scrollbar-width: none; /* For Firefox */
  -ms-overflow-style: none; /* For Internet Explorer and Edge */
}

.scrollbar-hidden::-webkit-scrollbar {
  display: none; /* For Chrome, Safari, and Opera */
}


body {
  background-color: black;
}

body::-webkit-scrollbar {
  display: none; /* For Chrome, Safari, and Opera */
}

@keyframes slideInLeft {
    0% {
      transform: translateX(-50px);
      opacity: 0;
    }
    100% {
      transform: translateX(0);
      opacity: 1;
    }
  }
  
  @keyframes fadeInLeft {
    0% {
      opacity: 0;
      transform: translateX(-30px);
    }
    100% {
      opacity: 1;
      transform: translateX(0);
    }
  }
  
/* Add these styles to your global CSS file or a relevant CSS module */
@keyframes slideInFromLeft {
  from {
    transform: translateX(-100%);
    opacity: 0;
  }
  to {
    transform: translateX(0);
    opacity: 1;
  }
}

@keyframes slideOutToLeft {
  from {
    transform: translateX(0);
    opacity: 1;
  }
  to {
    transform: translateX(-100%);
    opacity: 0;
  }
}

@keyframes slideInFromRight {
  from {
    transform: translateX(100%);
  }
  to {
    transform: translateX(0);
  }
}

@keyframes slideOutToRight {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(100%);
  }
}

@keyframes slideInFromLeft {
  from {
    transform: translateX(-100%);
  }
  to {
    transform: translateX(0);
  }
}

@keyframes slideOutToLeft {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-100%);
  }
}

.animate-slideInFromRight {
  animation: slideInFromRight 0.5s forwards;
}

.animate-slideOutToRight {
  animation: slideOutToRight 0.5s forwards;
}

.animate-slideInFromLeft {
  animation: slideInFromLeft 0.5s forwards;
}

.animate-slideOutToLeft {
  animation: slideOutToLeft 0.5s forwards;
}


/* styles/globals.css or a relevant CSS module */
.container {
  transition: transform 0.3s ease, opacity 0.3s ease;
}

